--- a/store/pdf/default/template/invoice/html.twig
+++ b/store/pdf/default/template/invoice/html.twig
@@ -85,7 +85,7 @@
 
 {% endblock php_script %}
 
-{% set recipient_info = invoice.invoice_contact %}
+{% set recipient_info = invoice.customer_contact %}
 
 {% block content %}
 
