--- a/app/admin/template/sales/invoice/queue/recurring.twig
+++ b/app/admin/template/sales/invoice/queue/recurring.twig
@@ -19,7 +19,7 @@
 			</div>
 		{% endif %}
 
-		<form class="form-horizontal" method="post" action="/sales/invoice/queue/recurring?action=edit&id={{ invoice_queue_recurring_group.id }}">
+		<form class="form-horizontal form-condensed" method="post" action="/sales/invoice/queue/recurring?action=edit&id={{ invoice_queue_recurring_group.id }}">
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				{% trans "Edit recurring invoice queue" %}
@@ -50,6 +50,31 @@
 							<input type="text" class="form-control datepicker" name="invoice_queue_recurring_group[next_run]" id="date_start" value="{{ invoice_queue_recurring_group.next_run }}">
 						</div>
 					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Run forever" %}</label>
+						<div class="col-xs-9"><input type="checkbox" id="run_forever" name="invoice_queue_recurring_group[run_forever]" data-group-cls="btn-group-xs" {% if invoice_queue_recurring_group.stop_after == '0000-00-00 00:00:00' %}checked{% endif %} onchange="toggle_run_forever();"></div>
+					</div>
+
+					<div class="form-group" id="stop_after">
+						<label class="col-xs-3 control-label">{% trans "Stop after" %}</label>
+						<div class="col-xs-9">
+							<input type="text" class="form-control datepicker" name="invoice_queue_recurring_group[stop_after]" value="{{ invoice_queue_recurring_group.stop_after }}">
+						</div>
+					</div>
+
+					<script type="text/javascript">
+						function toggle_run_forever() {
+							if ($('#run_forever').is(':checked')) {
+								$('#stop_after').addClass('hide');
+							} else {
+								$('#stop_after').removeClass('hide');
+							}
+						}
+						toggle_run_forever();
+					</script>
+
+
 					<div class="form-group">
 						<label class="col-xs-3 control-label">{% trans "Created" %}</label>
 						<div class="col-xs-5">
@@ -63,6 +88,9 @@
 						</div>
 					</div>
 				</div>
+
+				{% set customer_contacts = invoice_queue_recurring_group.customer.get_customer_contacts() %}
+
 				<div class="col-md-6">
 					<div class="form-group">
 						<label class="col-xs-3 control-label">{% trans "Customer" %}</label>
@@ -73,7 +101,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">{% trans "Invoice contact" %}</label>
 						<div class="col-xs-5">
-							<select class="form-control" name="invoice_queue_recurring_group[invoice_customer_contact_id]" id="invoice_contact" onchange="javascript:update_invoice_contact()">
+							<select class="form-control" name="invoice_queue_recurring_group[customer_contact_id]" id="invoice_contact" onchange="javascript:update_invoice_contact()">
 								{% for customer_contact in customer_contacts %}
 									<option value="{{ customer_contact.id }}" {% if customer_contact.id == invoice_queue_recurring_group.customer_contact_id %}selected="selected"{% endif %}>
 										{{ customer_contact.firstname }} {{ customer_contact.lastname }}{% if not customer_contact.active %} [{% trans "inactive" %}]{% endif %}
@@ -82,34 +110,32 @@
 							</select>
 						</div>
 					</div>
+
 					<div class="form-group">
-						<label class="col-xs-3 control-label"></label>
-						<div class="col-xs-5">
-							<p id="invoice_contact_email" class="form-control-static">{{ invoice_queue_recurring_group.customer_contact.email }}</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-xs-3 control-label"></label>
-						<div class="col-xs-5">
-							<p id="invoice_contact_company" class="form-control-static">{{ invoice_queue_recurring_group.customer_contact.company }}</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-xs-3 control-label"></label>
-						<div class="col-xs-5">
-							<p id="invoice_contact_street" class="form-control-static">{{ invoice_queue_recurring_group.customer_contact.street }} {{ invoice_queue_recurring_group.customer_contact.housenumber }}</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-xs-3 control-label"></label>
-						<div class="col-xs-5">
-							<p id="invoice_contact_city" class="form-control-static">{{ invoice_queue_recurring_group.customer_contact.zip }} {{ invoice_queue_recurring_group.customer_contact.city }}</p>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-xs-3 control-label"></label>
-						<div class="col-xs-5">
-							<p id="invoice_contact_vat" class="form-control-static">{{ invoice_queue_recurring_group.customer_contact.vat }}</p>
+						<div class="col-xs-5 col-xs-offset-3">
+
+
+						{% for customer_contact in customer_contacts %}
+						<address {% if customer_contact.id != invoice_queue_recurring_group.customer_contact_id %}class="hide"{% endif %} id="customer_contact_{{ customer_contact.id }}">
+							{% if customer_contact.company == '' %}
+								<strong>{{ customer_contact.firstname }} {{ customer_coontact.lastname }}
+							{% elseif customer_contact.firstname == '' and customer_contact.lastname == '' %}
+								<strong>{{ customer_contact.company }}</strong>
+							{% else %}
+								<strong>{{ customer_contact.firstname }} {{ customer_contact.lastname }} ({{ customer_contact.company }})</strong>
+							{% endif %}
+							<br />
+							{{ customer_contact.street }} {{ customer_contact.housenumber }}<br />
+							{{ customer_contact.zipcode }} {{ customer_contact.city }}<br />
+							{% if customer_contact.vat != '' %}
+								{{ customer_contact.country.iso2 }} {{ customer_contact.vat }} <br />
+							{% endif %}
+							{{ customer_contact.email }}
+						</address>
+						{% endfor %}
+
+
+
 						</div>
 					</div>
 				</div>
@@ -130,20 +156,20 @@
 				<table id="queue_items_table" class="table table-striped table-hover">
 					<thead>
 						<tr>
-							<th>{% trans "Product definition" %}</th>
+							<th width="350">{% trans "Product definition" %}</th>
 							<th>{% trans "Description" %}</th>
 							<th width="150">{% trans "VAT" %}</th>
 							<th width="150">{% trans "Quantity" %}</th>
 							<th width="150">{% trans "Price" %}</th>
-							<th>&nbsp;</th>
+							<th width="30">&nbsp;</th>
 						</tr>
 					</thead>
 					<tbody>
 						{% for invoice_queue_recurring in invoice_queue_recurring_group.get_invoice_queue_recurring() %}
 						<tr>
-							<td>{{ invoice_queue_recurring.article.id }} - {{ invoice_queue_recurring.article.name }}</td>
+							<td>{{ invoice_queue_recurring.product_type.name }}</td>
 							<td>{{ invoice_queue_recurring.description|truncate(50, true) }}</td>
-							<td>{{ invoice_queue_recurring.vat }}</td>
+							<td>{{ invoice_queue_recurring.vat }}%</td>
 							<td>{{ invoice_queue_recurring.qty }}</td>
 							<td>&euro;{{ invoice_queue_recurring.price|number_format }}</td>
 							<td>
@@ -171,51 +197,10 @@
 		</form>
 
 		<script>
-			var contacts = {
-					0: {
-						"alias":"",
-						"firstname":"",
-						"lastname":"",
-						"company":"",
-						"department":"",
-						"street":"",
-						"housenumber":"",
-						"city":"",
-						"zip":"",
-						"country":"",
-						"phone":"",
-						"email":"",
-						"vat":"",
-						"fax":""
-					},
-					{% for customer_contact in customer_contacts %}
-						{{ customer_contact.id}}: {
-							"alias":"{{ customer_contact.alias }}",
-							"firstname":"{{ customer_contact.firstname }}",
-							"lastname":"{{ customer_contact.lastname }}",
-							"company":"{{ customer_contact.company }}",
-							"department":"{{ customer_contact.department }}",
-							"street":"{{ customer_contact.street }}",
-							"housenumber":"{{ customer_contact.housenumber }}",
-							"city":"{{ customer_contact.city }}",
-							"zip":"{{ customer_contact.zip }}",
-							"country":"{{ customer_contact.country_id }}",
-							"phone":"{{ customer_contact.phone }}",
-							"email":"{{ customer_contact.email }}",
-							"vat":"{{ customer_contact.vat }}",
-							"fax":"{{ customer_contact.fax }}"
-					},
-					{% endfor %}
-			};
-
 			function update_invoice_contact() {
 				contact_id = $('#invoice_contact').val()
-				contact = contacts[contact_id]
-				$('#invoice_contact_email').html(contact['email']);
-				$('#invoice_contact_company').html(contact['company']);
-				$('#invoice_contact_street').html(contact['street'] + ' ' + contact['housenumber']);
-				$('#invoice_contact_city').html(contact['zip'] + ' ' + contact['city']);
-				$('#invoice_contact_vat').html(contact['vat']);
+				$('address').addClass('hide');
+				$('address#customer_contact_' + contact_id).removeClass('hide');
 			}
 
 			function add_queue_item() {
@@ -227,20 +212,13 @@
 				var html = template(context);
 				$("#queue_items_table tbody").append(html);
 			}
-
-			function remove_queue_item(item) {
-				item.parents('tr').remove();
-				if ($('#queue_items_table tbody tr').length == 0) {
-					$('#save_queue_items_btn').hide();
-				}
-			}
 		</script>
 		<script id="cloneable" type="text/x-handlebars-template">
 			<tr>
 				<td>
-					<select name="queue_item[article_id][]" class="form-control">
-					{% for article in articles %}
-						<option value="{{ article.id }}">{{ article.id }} - {{ article.name }}</option>
+					<select name="queue_item[product_type_id][]" class="form-control">
+					{% for product_type in product_types %}
+						<option value="{{ product_type.id }}">{{ product_type.name }}</option>
 					{% endfor %}
 					</select>
 				</td>
@@ -249,9 +227,9 @@
 				</td>
 				<td>
 					<select name="queue_item[vat][]" class="form-control">
-						<option value="0.06">6%</option>
-						<option value="0.12">12%</option>
-						<option value="0.21" selected>21%</option>
+						<option value="6">6%</option>
+						<option value="12">12%</option>
+						<option value="21" selected>21%</option>
 					</select>
 				</td>
 				<td>
@@ -539,6 +517,8 @@
 						<tr>
 							<th width="50">{{ pager.create_header('Id'|trans, 'id')|raw }}</th>
 							<th>{{ pager.create_header('Created'|trans, 'created')|raw }}</th>
+							<th>{{ pager.create_header('Next run'|trans, 'next_run')|raw }}</th>
+							<th>{{ pager.create_header('Stop after'|trans, 'stop_after')|raw }}</th>
 							<th>{{ pager.create_header('Customer'|trans, 'customer_id')|raw }}</th>
 							<th>{{ pager.create_header('Contact'|trans, 'invoice_customer_contact_id')|raw }}</th>
 							<th>{{ pager.create_header('Name'|trans, 'name')|raw }}</th>
@@ -550,25 +530,29 @@
 					</thead>
 					<tbody>
 			{% endif %}
-						<tr>
-							<td>{{ queue.id }}</td>
-							<td>{{ queue.created|date("d/m/Y") }}</td>
-							<td><a href="/administrative/customer/detail?id={{  queue.customer.id }}">{{ queue.customer.firstname }} {{ queue.customer.lastname }} ({{ queue.customer.company }})</a></td>
-							<td>{{ queue.customer_contact.firstname }} {{ queue.customer_contact.lastname }} ({{ queue.customer_contact.company }})</td>
-							<td>{{ queue.name|truncate(50, true) }}</td>
-							<td class="text-right">&euro;&nbsp;{{ queue.get_total_price()|number_format }}</td>
-							<td>&nbsp;</td>
-							<td>
-								<a href="/sales/invoice/queue/recurring?action=edit&id={{ queue.id }}">
-									<span class="glyphicon glyphicon-pencil"></span>
-								</a>
-							</td>
-							<td>
-								<a href="/sales/invoice/queue/recurring?action=delete&id={{ queue.id }}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete the recurring invoice queue selected" %}?">
-									<span class="glyphicon glyphicon-remove" /></span>
-								</a>
-							</td>
-						</tr>
+
+			<tr {% if queue.next_run >= queue.stop_after and queue.stop_after != '0000-00-00 00:00:00' %}class="warning"{% endif %}>
+				<td>{{ queue.id }}</td>
+				<td>{{ queue.created|date("d/m/Y") }}</td>
+				<td>{{ queue.next_run|date("d/m/Y") }}</td>
+				<td>{% if queue.stop_after == '0000-00-00 00:00:00' %}<i>{% trans "never" %}</i>{% else %}{{ queue.next_run|date("d/m/Y") }}{% endif %}</td>
+				<td><a href="/administrative/customer/detail?id={{  queue.customer.id }}">{{ queue.customer.firstname }} {{ queue.customer.lastname }} ({{ queue.customer.company }})</a></td>
+				<td>{{ queue.customer_contact.firstname }} {{ queue.customer_contact.lastname }} ({{ queue.customer_contact.company }})</td>
+				<td>{{ queue.name|truncate(50, true) }}</td>
+				<td class="text-right">&euro;&nbsp;{{ queue.get_total_price()|number_format }}</td>
+				<td>&nbsp;</td>
+				<td>
+					<a href="/sales/invoice/queue/recurring?action=edit&id={{ queue.id }}">
+						<span class="glyphicon glyphicon-pencil"></span>
+					</a>
+				</td>
+				<td>
+					<a href="/sales/invoice/queue/recurring?action=delete&id={{ queue.id }}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete the recurring invoice queue selected" %}?">
+						<span class="glyphicon glyphicon-remove" /></span>
+					</a>
+				</td>
+			</tr>
+
 			{% if loop.last %}
 					</tbody>
 					</table>
