--- a/app/admin/template/sales/invoice/queue.twig
+++ b/app/admin/template/sales/invoice/queue.twig
@@ -27,8 +27,6 @@
 
 			{% endif %}
 
-
-
 			{% set invoice_queue = customer_contact.get_outstanding_invoice_queue() %}
 			{% set total_price = 0 %}
 			{% for invoice_queue_item in invoice_queue %}
@@ -62,6 +60,18 @@
 						<label class="col-xs-3 control-label">{% trans "Total amount" %}</label>
 						<div class="col-xs-9">
 							<p class="form-control-static" id="total_amount">&euro;0</p>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Expiration date" %}</label>
+						<div class="col-xs-9">
+							<select name="invoice[expiration_date]" class="form-control">
+								<option value="+14 days">2 {% trans "weeks" %}</option>
+								<option value="+1 month" selected>1 {% trans "month" %}</option>
+								<option value="+60 days">60 {% trans "days" %}</option>
+								<option value="+90 days">90 {% trans "days" %}</option>
+							</select>
 						</div>
 					</div>
 
